# Cartograph

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cartograph/: __init__.py  cache.py  cli.py  config.py  evaluation.py  fingerprints.py  net.py  pipeline.py
cartograph/analysis/: __init__.py  centrality.py  clusters.py  diff.py  takeover.py
cartograph/collectors/: __init__.py  base.py  ct.py  rdap.py  wayback.py
cartograph/enrich/: __init__.py  _resolution.py  asn.py  base.py  doh.py  passive_dns.py
cartograph/graph/: __init__.py  model.py
cartograph/render/: __init__.py  graphviz.py  reports.py  summary.py
cartograph/scoring/: __init__.py  features.py  model.py  weights.py
cartograph/web/: __init__.py  app.py  service.py  templates.py
docs/: design_m2_scoring.md  design_web_ui.md  methodology.md  whitepaper.md
examples/: scope.example.yml
experiments/shopify/: results.json  run_experiment.py
tests/: test_analysis.py  test_ct_collector.py  test_enrichers.py  test_evaluation.py  test_graph_model.py  test_graphviz.py  test_net.py  test_pipeline.py  test_rdap_collector.py  test_scope_guard.py  test_scoring.py  test_wayback_collector.py  test_web_app.py  test_web_service.py
