[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartograph"
version = "0.0.1"
description = "Graph-based, passive attack-surface intelligence with a transparent exposure-scoring model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "kaiser" }]
keywords = ["osint", "recon", "attack-surface", "graph", "security", "reconnaissance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "httpx>=0.27",
    "networkx>=3.2",
    "numpy>=1.24",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.19"]
experiments = ["matplotlib>=3.7"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
cartograph = "cartograph.cli:app"

[project.urls]
Homepage = "https://github.com/kaiser/cartograph"
Documentation = "https://github.com/kaiser/cartograph/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["cartograph"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Typer's API idiomatically calls typer.Option()/Argument() in parameter defaults.
"cartograph/cli.py" = ["B008"]
# The embedded HTML/JS template legitimately contains long lines.
"cartograph/render/graphviz.py" = ["E501"]
# Experiment scripts favor readable print statements over strict line length.
"experiments/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["networkx.*", "fastapi.*", "starlette.*", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastAPI route decorators are dynamic; don't flag them as untyped in this module.
module = ["cartograph.web.app"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
